ui_tests/where_bounds_5.stderr
error: path must resolve to a trait
  ┌─ main.box:5:5
  │
5 │     Foo,
  │     ^^^

