ui_tests/where_bounds_5.box
type Foo {}

fn bar()
where {
    Foo,
} {}